--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -2,7 +2,7 @@
 <h2><%= @warehouse['description'] %></h2>
 
 <div>
-  <strong>Cidade:</strong> <%= @warehouse['city'] %>
-  <strong>Área:</strong> <%= @warehouse['area'] %> m2
-  <strong>Endereço:</strong> <%= @warehouse['address'] %> - <strong>CEP:</strong> <%= @warehouse['cep'] %>
+  <strong>Cidade:</strong> <%= @warehouse['city'] %><br>
+  <strong>Área:</strong> <%= @warehouse['area'] %> m2<br>
+  <strong>Endereço:</strong> <%= @warehouse['address'] %> - <strong>CEP:</strong> <%= @warehouse['cep'] %><br>
 </div>
